# Bumper-Bot

bumperbot_bringup/launch/: real_robot.launch.py
bumperbot_controller/config/: joy_teleop.yaml
bumperbot_description/launch/: gazebo.launch.py
bumperbot_description/meshes/: stereo_camera.STL
bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
bumperbot_firmware/: CMakeLists.txt  package.xml
bumperbot_firmware/include/bumperbot_firmware/: bumperbot_interface.hpp  digital_out.hpp  encoder.hpp  motor.hpp  pid.hpp  pwm_manager.hpp
bumperbot_firmware/src/: bumperbot_interface.cpp  digital_out.cpp  encoder.cpp  motor.cpp  pid.cpp  pwm_manager.cpp  simple_motor_control.cpp
bumperbot_vision/: CMakeLists.txt  package.xml
bumperbot_vision/bumperbot_vision/: stereo_vision.py
bumperbot_vision/config/: rtabmap.yaml
bumperbot_vision/include/bumperbot_vision/: stereo_vision.hpp
bumperbot_vision/src/: stereo_vision.cpp
